# Alchemy

./: .env.example  .gitignore  Dockerfile  README.md  alchemy_sdk.py  docker-compose.yml  download_models.py  pyproject.toml  server.py
alchemy/: __init__.py  config.py  schemas.py
alchemy/models/: manager.py
alchemy/parsers/: document.py  image.py  media.py  web.py
alchemy/queue/: worker.py
alchemy/utils/: chunker.py
examples/: quickstart.py
static/: app.js  index.html  style.css
